--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,1 +1,7 @@
-<p>todos works!</p>
+<div class="todos">
+    <div *ngFor="let todo of todos; let i = index" class="todo {{todo.completed?'done':''}}">
+        <div class="id">{{i+1}}</div>
+        <div class="content">{{todo.content}}</div>
+        <button class="delete">Remove</button>
+    </div>
+</div>
