--- a/src/app/components/todos/todos.component.css
+++ b/src/app/components/todos/todos.component.css
@@ -31,7 +31,7 @@
 	padding: 10px 15px;
 	appearance: none;
 	border: none;
-	background-color: #F3F3F3;
+	background-color: #00203F;
 	margin-top: 15px;
 	font-size: 20px;
 	outline: none;
@@ -46,7 +46,7 @@
 	outline: none;
 	background: none;
 
-	background-color: #FE4880;
+	background-color:#00203F;
 	color: #FFF;
 	margin: 15px auto;
 
