--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,7 +1,11 @@
 <div class="todos">
+    <form (submit)="addTodo()">
+        <input type="text" class="todo-input" name="inputTodo" [(ngModel)]="inputTodo" />
+        <input type="submit" class="todo-submit" value="Add Todo" />
+    </form>
     <div *ngFor="let todo of todos; let i = index" class="todo {{todo.completed?'done':''}}">
         <div class="id">{{i+1}}</div>
-        <div class="content">{{todo.content}}</div>
-        <button class="delete">Remove</button>
+        <div class="content" (click)="toggleDone(i)">{{todo.content}}</div>
+        <button class="delete" (click)="deleteTodo(i)">Remove</button>
     </div>
 </div>
